Small Footprint CIM Client Library NEWS

Changes in 2.0.0:
=================
Major restructuring in order to support alternative
backend implementations and to facilitate the
development of additional language frontends (bindings).

New Features
- 1654163: Restructure for pluggable backends
- 1654428: Removed obsolete libsfcUtil

Changes in 1.1.1:
=================
Bugs:
- 1596171: Fixed incorrect timeout assertion when system clock changes
- 1604433: Fixed memory leaks
- 1610514: Aligned sfcc/sfcb libsfcUtil
- 1636714: Fixed parser rule for method responses
- 1637057: Fixed Arrays not yet supported as function arguments
- 1653388: Fixed misaligned CMPIValue usage in test programs

Changes in 1.1.0:
=================
Merged in Changes from David Howell

New features:
- use version scripts
- new implementation of datetime
- conditional TE: Trailer 

Bugs:
- xxxxxxx: Fixed memory error with CIMStatus trailer

Changes in 1.0.1:
=================
New features:
- moved some util functions to sfcUtil, build as shared library

Bugs:
- 1518169: Fixed memory leak in constclass.c
- 1513362: Added setting of status code in function cmciConnect2,
           checking for NULL in CMSetStatus macros
- 1513278: Fixed segfault in property qualifier processing

Changes in 1.0.0:
=================
Bugs:
- 1439103: Evaluation of trailer headers for chunked transfers added.

Changes in 0.7.0:
=================
Bugs:
- 1315810: Support for Client Certificates Added.
- 1362805: Relicenced from CPL to EPL.